--- a/server/dev/flask/templates/index.html
+++ b/server/dev/flask/templates/index.html
@@ -11,7 +11,13 @@
 
 <div id="messages">
     </div>
+
+    <input type="text" id="room" placeholder="Room">
     <input type="text" id="username" placeholder="Username">
+    <button id="joinRoom">Join</button>
+    <br />
+
+
     <input type="text" id="message" placeholder="Message">
     <button id="sendBtn">Send</button>
 
