--- a/client/src/components/UserLoginCss.css
+++ b/client/src/components/UserLoginCss.css
@@ -51,13 +51,13 @@
 
 }
 
-.user-login input.invalid {
+.user-login input#invalid {
     border: 1px solid red !important;
     color: red;
     transition: color 0.35s ease, border 0.35s ease;
 }
 
-.user-login input.valid {
+.user-login input#valid {
     border: 1px solid green !important;
     color: greenyellow;
     transition: color 0.35s ease, border 0.35s ease;
